<resources>
    <string name="app_name">Cryptography</string>
    <string name="selection_choosing">Select Cryptography\nModern Type</string>
    <string name="symmetric">Symmetric</string>
    <string name="asymmetric">Asymmetric</string>
    <string name="key">Key</string>
    <string name="message">Message</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="encrypt_mode">Encryption Mode</string>
    <string name="decrypt_mode">Decryption Mode</string>
    <string name="error">Fields cannot be empty !</string>
    <string name="output">Output</string>
    <string name="encryption_output">Encryption Message</string>
    <string name="decryption_output">Decryption Message</string>
    <string name="plaintext">Plaintext</string>
    <string name="chipertext">Chipertext</string>
    <string name="ket">Note</string>
    <string name="public_key">Public and Private key have been generated randomly</string>
    <string name="private_key">Input message only</string>
    <string name="tag_line">with Symmetric and Asymmetric key</string>
</resources>