<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.SymmetricCryptographyActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_key"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_bold"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_key">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/avenir_medium"
            android:hint="@string/key"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_message"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="@+id/tf_key"
        app:layout_constraintStart_toStartOf="@+id/tf_key"
        app:layout_constraintTop_toBottomOf="@+id/tf_key"
        app:startIconDrawable="@drawable/ic_message">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/avenir_medium"
            android:hint="@string/message"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radio_button_1"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="@+id/tf_message"
        app:layout_constraintStart_toStartOf="@+id/tf_message"
        app:layout_constraintTop_toBottomOf="@+id/tf_message">

        <RadioButton
            android:id="@+id/encryption_selection"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            android:layout_marginEnd="8dp"
            android:onClick="onClick"
            android:text="@string/encrypt" />

        <RadioButton
            android:id="@+id/decryption_selection"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:onClick="onClick"
            android:text="@string/decrypt" />
    </RadioGroup>

    <Button
        android:id="@+id/encrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/encrypt"
        app:layout_constraintEnd_toEndOf="@+id/tf_message"
        app:layout_constraintStart_toStartOf="@+id/tf_message"
        app:layout_constraintTop_toBottomOf="@+id/radioNumber" />

    <Button
        android:id="@+id/decrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/decrypt"
        app:backgroundTint="@color/blue_700"
        app:layout_constraintEnd_toEndOf="@+id/tf_message"
        app:layout_constraintStart_toStartOf="@+id/tf_key"
        app:layout_constraintTop_toBottomOf="@+id/encrypt" />

    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/output"
        android:layout_marginTop="18dp"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/decrypt"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="16sp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/output"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/result"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/tv_result"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>